5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1807_2563.log
== TEST (2019-06-06 16:49:54) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma= 0 #somador
i= 0	#contador do vetor 
for i in range(size(notas)):
	if ( nota[i] >= 5):
print(nota)		

-- ERROR:
File "XXXX", line 8
    print(nota)		
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:49:58) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma= 0 #somador
i= 0	#contador do vetor 
for i in range(size(notas)):
	if ( nota[i] >= 5):
	print(nota)		

-- ERROR:
File "XXXX", line 8
    print(nota)		
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:52:05) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma = 0
 
for i in range(size(notas)):
	
	if ( nota[i] >= 5):
print(nota)		

-- ERROR:
File "XXXX", line 9
    print(nota)		
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:52:05) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma = 0
 
for i in range(size(notas)):
	
	if ( nota[i] >= 5):
print(nota)		

-- ERROR:
File "XXXX", line 9
    print(nota)		
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:52:15) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma = 0
 
for i in range(size(notas)):
	
	if ( nota[i] >= 5):
print(nota)

-- ERROR:
File "XXXX", line 9
    print(nota)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:52:24) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma = 0
 
for i in range(size(notas)):
	
	if ( nota[i] >= 5):
	print(nota)

-- ERROR:
File "XXXX", line 9
    print(nota)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:52:26) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma = 0
 
for i in range(size(notas)):
	
	if ( nota[i] >= 5):
	print(nota)

-- ERROR:
File "XXXX", line 9
    print(nota)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:52:28) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma = 0
 
for i in range(size(notas)):
	
	if ( nota[i] >= 5):
	print(nota)

-- ERROR:
File "XXXX", line 9
    print(nota)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:52:33) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma = 0
 
for i in range(size(notas)):
	
	if ( nota[i] >= 5):
		
		print(nota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:53:04) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma = 0
 
for i in range(size(notas)):
	
	if(nota[i] >= 5):
		
		print(nota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:53:20) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma = 0
 
for i in range(size(notas)):
	soma = soma + nota[i]
	if(nota[i] >= 5):
		
		print(nota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:53:31) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma = 0
 
for i in range(size(notas)):
	soma = soma + notas[i]
	if(nota[i] >= 5):
		
		print(nota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:53:35) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma = 0
 
for i in range(size(notas)):
	soma = soma + notas[i]
	if(notas[i] >= 5):
		
		print(nota)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:53:43) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma = 0
 
for i in range(size(notas)):
	soma = soma + notas[i]
	if(notas[i] >= 5):
		
		print(notas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:53:51) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma = 0
 
for i in range(size(notas)):
	
	if(notas[i] >= 5):
		
		print(notas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:54:01) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma = 0
 
for i in range(size(notas)):
	
	if(notas[i] >= 5):
		
		print(notas[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:54:30) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma = 0
 
for i in range(size(notas)):
	soma= soma + notas[i]
	if(notas[i] >= 5):
		
		print(notas[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:54:43) 
-- CODE:
from numpy import * 
notas= array(eval(input("media final:")))

soma = 0
 
for i in range(size(notas)):
	soma= soma + notas[i]
	if(notas[i] >= 5):
		
		print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:55:14) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	soma= soma + notas[i]
	if(notas[i] >= 5):
		
		print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:55:55) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] >= 5):
	soma= soma + notas[i]
	
		
		print(soma)

-- ERROR:
File "XXXX", line 8
    soma= soma + notas[i]
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:56:01) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] >= 5):
		soma= soma + notas[i]
	
		
		print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:57:08) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] >= 5):
		
		
		print(notas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:57:16) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] >= 5):
		
		
		print(notas[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:58:26) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] >= 5 and notas[i] <=7):
		
		
		print(notas[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:58:47) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] > 5 and notas[i] <=7):
		
		
		print(notas[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:59:20) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] >= 5 and notas[i] <7):
		
		
		print(notas[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:59:56) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] >= 5 and notas[i] <7):
		
		
		print(sum(notas[i]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:00:37) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] >= 5 and notas[i] <7):
		
		
		print(notas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:01:07) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] >= 5 and notas[i] <7):
		
		
		print(sum(notas[i]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:06:16) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] >= 5 and notas[i] <7):
		
		
		print((size(notas[i]))

-- ERROR:
File "XXXX", line 11
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:06:47) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] >= 5 and notas[i] <7):
		
		
		print((size(notas))

-- ERROR:
File "XXXX", line 11
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:06:57) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] >= 5 and notas[i] <7):
		
		
		print((size(notas))
-- ERROR:
File "XXXX", line 11
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:07:01) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] >= 5 and notas[i] <7):
		
		
	print((size(notas))
-- ERROR:
File "XXXX", line 10
    print((size(notas))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:07:02) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] >= 5 and notas[i] <7):
		
		
	print((size(notas))
-- ERROR:
File "XXXX", line 10
    print((size(notas))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:07:08) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] >= 5 and notas[i] <7):
		
		
		print((size(notas))
-- ERROR:
File "XXXX", line 11
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:07:19) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

soma = 0
 
for i in range(size(notas)):
	if(notas[i] >= 5 and notas[i] <7):
		
		
		print(size(notas))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:10:27) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))


for i in range(size(notas)):
	soma = 0
	if(notas[i] >= 5 and notas[i] <7):
		soma= soma + 1
		
print(notas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:10:42) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))


for i in range(size(notas)):
	soma = 0
	if(notas[i] >= 5 and notas[i] <7):
		soma= soma + 1
		
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:10:51) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))


for i in range(size(notas)):
	soma = 0
	if(notas[i] >= 5 and notas[i] <7):
		soma= soma + 1
		
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:12:31) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))


for i in notas:
	soma = 0
	if(notas >= 5 and notas <7):
		soma= soma + 1
		
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:13:19) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))


for i in notas:
	soma = 0
	if(i >= 5 and i <7):
		soma= soma + 1
		
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:14:46) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))


for i in notas:
	soma = 0
	if(i >= 5 and i < 7):
			soma= soma + 1
		
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:14:53) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))


for i in notas:
	soma = 0
	if(i >= 5 and i < 7):
	soma= soma + 1
		
print(soma)
-- ERROR:
File "XXXX", line 8
    soma= soma + 1
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:15:20) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))


for i in notas:
	soma = 0
	if(i >= 5 and i < 7):
		print(i)
		soma = soma + 1
		
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:15:41) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))


for i in notas:
	soma = 0
	if(i >= 5 and i < 7):
		soma = soma + 1
		
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:17:18) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

while(size(notas) > 1):
	for i in notas:
		soma = 0
		if(i >= 5 and i < 7):
			soma = soma + 1
		
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:17:36) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

while(size(notas) > 1):
	for i in notas:
		soma = 0
		if(i >= 5 and i < 7):
			soma = soma + 1
		
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:19:35) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

while(size(notas) > 1):
	soma = 0
	for i in notas:
		if(i >= 5 and i < 7):
			soma = soma + 1
		
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:21:17) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

while(size(notas) > 1):
	soma = 0
	for i in notas:
		if(i >= 5 and i < 7):
			soma = soma + 1
		
	print(soma)
	
	notas= array(eval(input("aprovados:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:21:59) 
-- CODE:
from numpy import * 
notas= array(eval(input("aprovados:")))

while(size(notas) > 1):
	soma = 0
	for i in notas:
		if(i >= 5 and i < 7):
			soma = soma + 1
		
	print(soma)
	
	notas= array(eval(input("aprovados:")))
-- EXECUTION TIME:
1.10086
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
